--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "db:sync": "node scripts/sync-db"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.6.7",
+    "@headlessui/vue": "^1.7.2",
+    "@heroicons/vue": "^2.0.11",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/i18n": "8.0.0-alpha.1",
     "@pinia/nuxt": "^0.4.1",
+    "@supabase/supabase-js": "^1.35.7",
     "@vueuse/core": "^9.1.1",
-    "highlight.js": "^11.6.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-prism": "^2.2.5",
     "pinia": "^2.0.21",
     "prism-themes": "^1.9.0",
     "vee-validate": "^4.6.7",
@@ -26,30 +28,28 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
+    "@babel/core": "^7.19.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@iconify/json": "^2.1.100",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/strapi": "^1.5.0",
     "@nuxtjs/tailwindcss": "^5.3.2",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-vite": "^0.2.2",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/vue3": "^6.5.10",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/react": "file:stub/types__react",
-    "@vueuse/nuxt": "^9.1.1",
+    "@vueuse/nuxt": "^9.2.0",
     "babel-loader": "^8.2.5",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "nuxt": "3.0.0-rc.11",
     "nuxt-icon": "^0.1.5",
+    "prettier": "2.7.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8",
+    "vue-i18n": "^9.2.2",
     "vue-loader": "^17.0.0"
   }
 }
