--- a/package.json
+++ b/package.json
@@ -13,17 +13,25 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.2",
     "@heroicons/vue": "^2.0.11",
+    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/i18n": "8.0.0-alpha.1",
     "@pinia/nuxt": "^0.4.1",
     "@supabase/supabase-js": "^1.35.7",
     "@vueuse/core": "^9.1.1",
+    "dayjs": "^1.11.5",
+    "flowbite": "^1.5.3",
+    "mapbox-gl": "^2.10.0",
     "pinia": "^2.0.21",
     "prism-themes": "^1.9.0",
     "vee-validate": "^4.6.7",
     "vue": "^3.2.37",
+    "vue-carousel": "^0.18.0",
     "vue-gtag": "^2.0.1",
+    "vue-mapbox": "^0.4.1",
+    "vue-mapbox-ts": "^0.9.3",
+    "vue3-carousel": "^0.1.48",
     "windplus": "^0.0.2",
     "yup": "^0.32.11"
   },
@@ -36,6 +44,7 @@
     "@nuxtjs/strapi": "^1.5.0",
     "@nuxtjs/tailwindcss": "^5.3.2",
     "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/react": "file:stub/types__react",
     "@vueuse/nuxt": "^9.2.0",
