--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,9 @@
   "extends": [
     "@nuxtjs/eslint-config-typescript",
     "plugin:nuxt/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+   "prettier"
+
   ],
   "plugins": [],
   "rules": {
