--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pinia/nuxt": "^0.4.1",
     "@supabase/supabase-js": "^1.35.7",
     "@vueuse/core": "^9.1.1",
+    "axios": "^1.1.3",
     "dayjs": "^1.11.5",
     "flowbite": "^1.5.3",
     "mapbox-gl": "^2.10.0",
