--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "strict": true,
-    "types": [
-      "@vueuse/nuxt",
-      "@intlify/nuxt3",
-      "@nuxtjs/auth-next",
-    ]
-  }
+    "extends": "./.nuxt/tsconfig.json",
+    "compilerOptions": {
+        "strict": true,
+        "types": ["@vueuse/nuxt", "@intlify/nuxt3", "@nuxtjs/auth-next"]
+    }
 }
