--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@vueuse/core": "^9.1.1",
         "axios": "^1.1.3",
         "dayjs": "^1.11.5",
-        "flowbite": "^1.5.3",
+        "flowbite": "^1.5.5",
         "mapbox-gl": "^2.10.0",
         "pinia": "^2.0.21",
         "prism-themes": "^1.9.0",
@@ -42,7 +42,7 @@
         "@commitlint/cli": "^17.1.2",
         "@commitlint/config-conventional": "^17.1.0",
         "@iconify/json": "^2.1.100",
-        "@nuxt/content": "^2.0.1",
+        "@nuxt/vite-builder": "^3.0.0",
         "@nuxtjs/strapi": "^1.5.0",
         "@nuxtjs/tailwindcss": "^5.3.2",
         "@tailwindcss/forms": "^0.5.2",
@@ -53,8 +53,9 @@
         "babel-loader": "^8.2.5",
         "eslint-config-prettier": "^8.5.0",
         "husky": "^8.0.1",
-        "nuxt": "3.0.0-rc.11",
+        "nuxt": "3.0.0-rc.14",
         "nuxt-icon": "^0.1.5",
+        "postcss-custom-properties": "^12.1.11",
         "prettier": "2.7.1",
         "sass": "^1.55.0",
         "sass-loader": "^13.0.2",
