--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
         "tailwindcss": "^3.1.8",
         "vue-i18n": "^9.2.2",
         "vue-loader": "^17.0.0"
+    },
+    "engines": {
+        "node": "16.x"
     }
 }
