updating the package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "preview": "nuxt preview",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
-        "db:sync": "node scripts/sync-db"
+        "db:sync": "node scripts/sync-db",
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.2",
@@ -66,5 +66,6 @@
     },
     "engines": {
         "node": "16.x"
-    }
+    },
+    "heroku-postbuild": "yarn generate"
 }
