updating the package.json

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
         "vue-i18n": "^9.2.2",
         "vue-loader": "^17.0.0"
     },
+    "heroku-postbuild": "yarn generate",
     "engines": {
         "node": "16.x"
-    },
-    "heroku-postbuild": "yarn generate"
+    }
 }
