--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "heroku-postbuild": "nuxt generate",
         "dev": "nuxi dev",
         "build": "nuxi build",
-        "start": "node .output/public/index.html",
+        "start": "node .output/server/index.mjs",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
         "storybook": "start-storybook -p 6006",
@@ -44,17 +44,16 @@
         "@commitlint/config-conventional": "^17.1.0",
         "@iconify/json": "^2.1.100",
         "@nuxt/vite-builder": "^3.0.0",
-        "@nuxtjs/strapi": "^1.5.0",
-        "@nuxtjs/tailwindcss": "^5.3.2",
+        "@nuxtjs/tailwindcss": "6.2.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@tailwindcss/typography": "^0.5.4",
         "@types/react": "file:stub/types__react",
-        "@vueuse/nuxt": "^9.2.0",
+        "@vueuse/nuxt": "^9.10.0",
         "babel-loader": "^8.2.5",
         "eslint-config-prettier": "^8.5.0",
         "husky": "^8.0.1",
-        "nuxt": "3.0.0-rc.14",
+        "nuxt": "3.0.0",
         "nuxt-icon": "^0.1.5",
         "postcss-custom-properties": "^12.1.11",
         "prettier": "2.7.1",
@@ -64,8 +63,5 @@
         "tailwindcss": "^3.1.8",
         "vue-i18n": "^9.2.2",
         "vue-loader": "^17.0.0"
-    },
-    "engines": {
-        "node": "16.x"
     }
 }
