--- a/package.json
+++ b/package.json
@@ -2,33 +2,24 @@
     "private": true,
     "scripts": {
         "heroku-postbuild": "nuxt generate",
-        "dev": "nuxi dev",
+
         "build": "nuxi build",
-        "start": "node .output/server/index.mjs",
+        "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook",
-        "db:sync": "node scripts/sync-db"
+        "postinstall": "nuxt prepare"
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.2",
         "@heroicons/vue": "^2.0.11",
-        "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
-        "@nuxtjs/eslint-config-typescript": "^11.0.0",
-        "@nuxtjs/eslint-module": "^3.1.0",
         "@nuxtjs/i18n": "8.0.0-alpha.1",
         "@pinia/nuxt": "^0.4.1",
         "@supabase/supabase-js": "^1.35.7",
         "@vueuse/core": "^9.1.1",
         "axios": "^1.1.3",
         "dayjs": "^1.11.5",
-        "flowbite": "^1.5.5",
         "mapbox-gl": "^2.10.0",
-        "pinia": "^2.0.21",
-        "prism-themes": "^1.9.0",
         "vee-validate": "^4.6.7",
-        "vue": "^3.2.37",
         "vue-carousel": "^0.18.0",
         "vue-gtag": "^2.0.1",
         "vue-mapbox": "^0.4.1",
@@ -39,29 +30,15 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "@babel/core": "^7.19.1",
-        "@commitlint/cli": "^17.1.2",
-        "@commitlint/config-conventional": "^17.1.0",
-        "@iconify/json": "^2.1.100",
-        "@nuxt/vite-builder": "^3.0.0",
         "@nuxtjs/tailwindcss": "6.2.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@tailwindcss/typography": "^0.5.4",
-        "@types/react": "file:stub/types__react",
         "@vueuse/nuxt": "^9.10.0",
-        "babel-loader": "^8.2.5",
-        "eslint-config-prettier": "^8.5.0",
         "husky": "^8.0.1",
         "nuxt": "3.0.0",
         "nuxt-icon": "^0.1.5",
-        "postcss-custom-properties": "^12.1.11",
         "prettier": "2.7.1",
-        "sass": "^1.55.0",
-        "sass-loader": "^13.0.2",
-        "swiper": "^8.3.2",
-        "tailwindcss": "^3.1.8",
-        "vue-i18n": "^9.2.2",
-        "vue-loader": "^17.0.0"
+        "vue-i18n": "^9.2.2"
     }
 }
