--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-mapbox-ts": "^0.9.3",
         "vue3-carousel": "^0.1.48",
         "vue3-lottie": "^2.4.0",
+        "vue3-toastify": "^0.1.1",
         "windplus": "^0.0.2",
         "yup": "^0.32.11"
     },
