--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.2",
         "@heroicons/vue": "^2.0.11",
+        "@netsells/nuxt-hotjar": "^0.1.3",
         "@nuxtjs/i18n": "8.0.0-alpha.1",
+        "@nuxtjs/sentry": "^7.1.2",
         "@pinia/nuxt": "^0.4.1",
+        "@sentry/tracing": "^7.40.0",
+        "@sentry/vue": "^7.40.0",
         "@supabase/supabase-js": "^1.35.7",
         "@vueuse/core": "^9.1.1",
         "axios": "^1.1.3",
