--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
     "extends": "./.nuxt/tsconfig.json",
     "compilerOptions": {
         "strict": true,
-        "types": ["@vueuse/nuxt", "@intlify/nuxt3", "@nuxtjs/auth-next"]
+        "types": [
+            "@vueuse/nuxt",
+            "@intlify/nuxt3",
+            "@nuxtjs/auth-next",
+            "@nuxtjs/sentry",
+            "vue3-toastify/global"
+        ]
     }
 }
