--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "scripts": {
         "heroku-postbuild": "nuxt generate",
         "build": "nuxi build",
+        "start": "nuxt start",
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
@@ -39,9 +40,9 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@tailwindcss/typography": "^0.5.4",
-        "@vueuse/nuxt": "^9.10.0",
+        "@vueuse/nuxt": "^9.13.0",
         "husky": "^8.0.1",
-        "nuxt": "3.0.0",
+        "nuxt": "^3.3.1",
         "nuxt-icon": "^0.1.5",
         "prettier": "2.7.1",
         "vue-i18n": "^9.2.2"
