--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@heroicons/vue": "^2.0.11",
         "@netsells/nuxt-hotjar": "^0.1.3",
         "@nuxtjs/i18n": "8.0.0-alpha.1",
+        "@nuxtjs/robots": "^3.0.0",
         "@nuxtjs/sentry": "^7.1.2",
         "@pinia/nuxt": "^0.4.1",
         "@sentry/tracing": "^7.40.0",
@@ -36,6 +37,7 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
+        "@nuxtjs/google-analytics": "^2.4.0",
         "@nuxtjs/tailwindcss": "6.2.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/line-clamp": "^0.4.2",
