--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "axios": "^1.1.3",
         "dayjs": "^1.11.5",
         "mapbox-gl": "^2.10.0",
+        "maska": "^2.1.7",
         "v-lazy-image": "^2.1.1",
         "vee-validate": "^4.6.7",
         "vue-carousel": "^0.18.0",
