--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@sentry/vue": "^7.40.0",
         "@supabase/supabase-js": "^1.35.7",
         "@vueuse/core": "^9.1.1",
+        "@vueuse/integrations": "^9.13.0",
         "axios": "^1.1.3",
         "dayjs": "^1.11.5",
+        "jwt-decode": "^3.1.2",
         "mapbox-gl": "^2.10.0",
         "maska": "^2.1.7",
         "v-lazy-image": "^2.1.1",
