--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-gtag": "^2.0.1",
         "vue-mapbox": "^0.4.1",
         "vue-mapbox-ts": "^0.9.7",
+        "vue-social-sharing": "^4.0.0-alpha4",
         "vue3-carousel": "^0.1.48",
         "vue3-lottie": "^2.4.0",
         "vue3-toastify": "^0.1.1",
