--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@sentry/tracing": "^7.40.0",
         "@sentry/vue": "^7.40.0",
         "@supabase/supabase-js": "^1.35.7",
+        "@vercel/analytics": "^0.1.11",
         "@vueuse/core": "^9.1.1",
         "@vueuse/integrations": "^9.13.0",
         "axios": "^1.1.3",
