--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@supabase/supabase-js": "^1.35.7",
         "@vercel/analytics": "^0.1.11",
         "@vueuse/core": "^9.1.1",
+        "@vueuse/head": "^1.1.23",
         "@vueuse/integrations": "^9.13.0",
         "axios": "^1.1.3",
         "dayjs": "^1.11.5",
