--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
         "@vueuse/integrations": "^9.13.0",
         "axios": "^1.1.3",
         "dayjs": "^1.11.5",
+        "html-to-image": "^1.11.11",
+        "jspdf": "^2.5.1",
         "jwt-decode": "^3.1.2",
         "mapbox-gl": "^2.10.0",
         "maska": "^2.1.7",
+        "qrcode.vue": "^3.4.0",
         "v-lazy-image": "^2.1.1",
         "vee-validate": "^4.6.7",
         "vue-carousel": "^0.18.0",
@@ -38,6 +41,7 @@
         "vue-social-sharing": "^4.0.0-alpha4",
         "vue3-carousel": "^0.1.48",
         "vue3-lottie": "^2.4.0",
+        "vue3-simple-html2pdf": "^0.0.7",
         "vue3-toastify": "^0.1.1",
         "windplus": "^0.0.2",
         "yup": "^0.32.11"
